# Emuera-Toolbox

./: .gitignore  ChangeLog.md  README.md  index.html  package.json  rollup.config.js  vite.config.ts  webpack.config.dev.js  webpack.config.js  windi.config.ts
.github/workflows/: release.yml
emuera-toolbox-backend/: .gitignore  Cargo.toml
emuera-toolbox-backend/src/: main.rs
emuera-toolbox-frontend/: index.html  package.json  vite.config.ts
emuera-toolbox-frontend/src/: App.vue  main.ts
src/: App.vue  Root.vue  index.html  index.js  main.js  main.ts  renderer.js  renderer.ts  shims-global.ts  shims-vuex.d.ts  types.d.ts
src/components/: AppEditor.vue  AppExplorer.vue  AppFooter.vue  AppHeader.vue  AppIdle.vue  AppRoot.vue  ChangeLanguageButton.vue  DictionaryManager.vue  EditorConfig.vue  EditorCsv.vue  EditorErb.vue  EditorErbLine.vue  EditorErh.vue  HeaderMenuItem.vue  HeaderMenus.vue  HelloWorld.vue  InlineInput.vue  ThemeToggleButton.vue
src/css/: config-editor.css  config.css  editor.css  explorer.css  idle.css  reset.css  theme.css
src/grammars/: config copy 2.pegjs  config copy.pegjs  config.pegjs  csv.pegjs  dict-txt.pegjs  dict.pegjs  erb copy 2.pegjs  erb copy 3.pegjs  erb copy 4.pegjs  erb.pegjs  erh.pegjs
src/help/: index.html
src/locales/: zh_CN.yml
src/managers/: app.js  data.js  display.js  net.js  router.js  store.js  task.js  window.js
src/modules/: io.ts
src/routes/: AppIndex.vue  Editor.vue  Explorer.vue  config-editor.js  config.js  csv-editor.js  editor.js  erb-editor.js  erh-editor.js  explorer.js  idle.js
(+10 files in other folders)
